force-app/main/default/objects/Payout__c/Payout__c.object-meta.xml
<CustomObject>
    <label>Payout</label>
    <pluralLabel>Payouts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <label>Payout Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>