force-app/main/default/objects/Payout__c/fields/Is_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Paid__c</fullName>
    <label>Is Paid</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>