force-app/main/default/objects/Payout__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payouts</relationshipLabel>
    <relationshipName>Contact_Payouts</relationshipName>
</CustomField>