force-app/main/default/objects/Payout__c/fields/Payment_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction__c</fullName>
    <label>Payment Transaction</label>
    <type>Lookup</type>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Payout Payments</relationshipLabel>
    <relationshipName>Payout_Payments</relationshipName>
</CustomField>